# duo-scrapo

./: .env  .gitignore  .gitmodules  .mise.toml  README.md  chat.md  config.example.toml  output.md  pyproject.toml  tags.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
src/duo_scrapo/: Morf.py  __init__.py  ank.py  annotate.py  check_with_morfeusz_c_module.py  crawler.py  do_classification.py  export.py  flag.py  parse_classified_tsv.py  sk.py  str_flag.py  tag.py  test_morf_decline_noun.py  test_str_flag.py
src/duo_scrapo/słowa/: __init__.py  czasowniki.py  przyimki.py  przymiotniki.py  przysłówki.py  rzeczowniki.py  słownictwo.py  zaimki.py
src/duo_scrapo/templates/: __init__.py  czasowniki.py  przymiotniki.py  rzeczowniki.py
src/duo_scrapo/tests/Morf/: test_get_root.py
src/duo_scrapo/typings/: morfeusz2.pyi
src/duo_scrapo/words/: __init__.py  adjectives.py  adverbs.py  forms.py  nouns.py  prepositions.py  pronouns.py  verbs.py
test/: test_ank.py  test_morf_decline_noun.py  test_smoke.py  test_str_flag.py
typings/: morfeusz2.pyi
typings/genanki/: __init__.pyi  apkg_col.pyi  apkg_schema.pyi  builtin_models.pyi  card.pyi  deck.pyi  model.pyi  note.pyi  package.pyi  util.pyi
