[project]
name = "duo-scrapo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.2.0",
    "cattrs>=24.1.1",
    "crawlee[all]>=0.3.6",
    "morfeusz2>=1.99.9",
]

[project.scripts]
crawl = "duo_scrapo.crawler:crawl"
export = "duo_scrapo.export:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
    "mypy>=1.11.2",
]
